<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Sign_Up">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="160dp"
        android:layout_height="90dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="160dp"
        android:src="@drawable/showcaselogo"
        />

    <EditText
        android:id="@+id/fullname_signup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/logo"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="6dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/inputs_background"
        android:hint="@string/fullname"
        android:inputType="textEmailAddress"
        android:padding="10dp" />

    <EditText
        android:id="@+id/username_signup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/fullname_signup"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="6dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/inputs_background"
        android:hint="@string/username"
        android:inputType="textEmailAddress"
        android:padding="10dp" />

    <EditText
        android:id="@+id/email_signup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/username_signup"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="6dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/inputs_background"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:padding="10dp" />

    <EditText
        android:id="@+id/password_signup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/email_signup"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="6dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/inputs_background"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:padding="10dp" />
    <CheckBox
        android:id="@+id/checkSeller"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/choose_seller"
        android:layout_below="@id/password_signup"
        android:layout_alignParentEnd="true"
        android:layout_margin="10dp"/>
    <CheckBox
        android:id="@+id/checkBuyer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/choose_buyer"
        android:layout_below="@id/password_signup"
        android:layout_alignParentStart="true"
        android:layout_margin="10dp"/>
    <Button
        android:id="@+id/signup_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/checkSeller"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="10dp"
        android:backgroundTint="@color/white"
        android:text="@string/sign_up"
        android:textColor="@color/black"
        android:textAllCaps="false"
        android:textSize="17sp"
        />

    <Button
        android:id="@+id/signin_link_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="6dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="10dp"
        android:backgroundTint="@color/black"
        android:text="@string/already_have_and_account_sign_in"
        android:textAllCaps="false"
        android:textColor="#FFFFFF"
        android:textSize="17sp" />


</RelativeLayout>